--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/x-charts": "^8.2.0",
     "@tailwindcss/vite": "^4.0.17",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-admin": "^5.8.1",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
