--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@mui/x-charts": "^8.2.0",
+    "@mui/x-date-pickers": "^8.5.1",
     "@tailwindcss/vite": "^4.0.17",
+    "dayjs": "^1.11.13",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-admin": "^5.8.1",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
