--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
