--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,13 @@
     "@mui/x-charts": "^8.2.0",
     "@mui/x-date-pickers": "^8.5.1",
     "@tailwindcss/vite": "^4.0.17",
+    "@uiw/react-signature": "^1.3.2",
     "dayjs": "^1.11.13",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-admin": "^5.8.1",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
-    "react-signature-canvas": "^1.1.0-alpha.2",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
