--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.0",
     "@mui/x-charts": "^8.4.0",
+    "@mui/x-date-pickers": "^8.5.2",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
