--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
