--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.30.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^3.0.2",
+  "xlsx": "^0.18.5",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
