chore: push latest client and server changes; add root .gitignore; emails/gmail/health endpoints & migrations

--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "dev": "nodemon index.js",
-  "migrate": "node ./scripts/run-migrations.js"
+    "dev": "nodemon index.js",
+    "migrate": "node ./scripts/run-migrations.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,9 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+  "express": "^5.1.0",
+  "dotenv": "^16.4.5",
+    "googleapis": "^155.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
