feat(reports): export Aprobados to Excel; align report counts; add Grupo to details; realtime admin notifications; ws heartbeat; ignore server uploads in git

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,13 @@ dist-ssr/
 build/
 coverage/
 
+# Server uploads and generated files
+server/uploads/
+server/comprobantes/
+server/public/
+server/contratos/
+server/tokens/
+
 # Environment
 .env
 **/.env
