--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-  "preview": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
@@ -29,8 +30,8 @@
     "react-router-dom": "^6.30.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^3.0.2",
-  "xlsx": "^0.18.5",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
