--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-  "preview": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,18 +19,21 @@
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
+    "katex": "^0.16.22",
     "lucide-react": "^0.525.0",
+    "mathlive": "^0.107.0",
     "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-katex": "^3.1.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.30.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^3.0.2",
-  "xlsx": "^0.18.5",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
