Finanzas: egresos fijos/variables integrados a API, plantillas semifijas con calendario, bloqueo de borrado de eventos vinculados, presupuesto y resumen mensual; auto-instanciación opcional via job

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "simulate": "node ./scripts/simular_tests.js",
-    "seed:asesor": "node ./scripts/seed-asesor-sample.js"
+  "seed:asesor": "node ./scripts/seed-asesor-sample.js",
+  "migrate": "node ./scripts/run-migrations.js"
   },
   "keywords": [],
   "author": "",
