--- a/client/package.json
+++ b/client/package.json
@@ -24,16 +24,17 @@
     "lucide-react": "^0.525.0",
     "mathlive": "^0.107.1",
     "pdf-lib": "^1.17.1",
-  "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-katex": "^3.0.1",
+    "react-markdown": "^9.0.1",
+    "react-mathquill": "^1.0.4",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.30.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
-    "react-markdown": "^9.0.1",
     "recharts": "^3.0.2",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "^4.1.7",
