Fix: ajuste de la tabla de Quizzes

--- a/client/.env
+++ b/client/.env
@@ -15,3 +15,7 @@ VITE_GEMINI_MODEL=gemini-exp-1206
 
 # Límite máximo de preguntas generadas por IA
 VITE_AI_MAX_QUESTIONS=50
+
+# Configuración de IA para análisis de quizzes
+# Si está en 'true', usa solo Groq (llama 3.3 70B) y salta Gemini
+VITE_USE_GROQ_FOR_ANALYSIS=true
